...
  Created by Sebastian Kuhlen on 28.05.16.
  Copyright © 2016 RWTH Aachen. All rights reserved.
*/

"apple_ban" = "This experiment is no longer available.";
"app_name" = "phyphox";
"actions" = "Actions";
"action_settings" = "Settings";
"title_activity_experiment" = "phyphox";
"newExperiment" = "Add experiment";
"newExperimentSimple" = "Add simple experiment";
"newExperimentPhyphoxInfo" = "Visit phyphox.org to create more advanced experiments including data analysis and share them with colleagues, students and friends.";
"newExperimentInputTitle" = "Title";
...
"sensorNotAvailableWarningText1" = "The sensor";
"sensorNotAvailableWarningText2" = "is not available. Usually this means, that your device simply does not have this type of sensor.";
"sensorNotAvailableWarningMoreInfo" = "More info";
"sensorNotAvailableWarningMoreInfoURL" = "http://phyphox.org/faq/#faqMissingSensor";
"appleBanWarningMoreInfo" = "More info";
"appleBanWarningMoreInfoURL" = "http://phyphox.org/faq/#faqAppleBan";
"ok" = "OK";
"accept" = "Accept";
"tryagain" = "Try again";
"doContinue" = "Continue";
"close" = "Close";
"next" = "Next";
"cancel" = "Cancel";
"unknown" = "unknown";
"rename" = "Rename";
"delete" = "Delete";
"select" = "--select--";
"chooseOption" = "Choose an option";
"confirmDelete" = "Do you want to delete this experiment from your collection?";
"confirmDeleteTitle" = "Confirm delete?";
"stop" = "Stop";
"start" = "Start";
...
"switchColumns3" = "View: 3 columns";
"toggleBrightMode" = "Bright mode";
"fontSize" = "Font size";
"show_description" = "Experiment info";
"save_locally" = "Add experiment to collection";
"save_locally_message" = "This experiment has been opened from a remote source. Do you want to add it to your experiment collection?";
"save_locally_button" = "Save to collection";
"save_locally_done" = "Experiment successfully added to collection.";
"save_state" = "Save experiment state";
"save_state_category" = "Saved experiment states";
"save_state_message" = "You can save the state of this experiment including your data to your collection or share it with a third-party app.";
"url_invalid" = "Invalid URL";
"url_invalid_msg" = "This experiment is just a link, but no valid URL was found.";
...
"newExperimentBTReadErrorTitle" = "Bluetooth experiment error.";
"newExperimentBTReadErrorCorrupted" = "The transmitted experiment data is corrupted.";
"showQRCodeForRemoteURL" = "QR code to access the URL";
"generalErrorDialog" = "An error has occurred.";
"open_zip_title" = "Opening a set of experiments";
"open_zip_dialog_instructions" = "This resource contains multiple experiments. You can either pick one to open it and optionally save it to your collection or use the button below to save them all to your collection at once.";
"open_save_all" = "Save all";
"open_bluetooth_assets_title" = "Experiments for Bluetooth device";
"open_bluetooth_assets" = "The following experiments for your device are available from phyphox. You can either just open and use them or add them all to your collection to easily access them from the main menu.";
"bluetooth" = "Bluetooth Low Energy";
"bt_pick_device" = "Please pick a device.";
"bt_scanning_generic" = "Scanning for Bluetooth devices…";
"bt_scanning_specific1" = "Scanning for Bluetooth devices with";
...
